--- a/main.css
+++ b/main.css
@@ -16,6 +16,11 @@ footer {
     font-family: Arial;
     margin: 0px;
 }
+a {
+    color: rgb(2, 2, 155);
+    text-decoration: none;
+    transition: 3s 1s;
+}
 a:link {
     color: brown;
 }
@@ -25,6 +30,7 @@ a:visited {
 a:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
+    transition: 0.3s;
 }
 a:active {
     color: aqua;
